# exercise1-markaren

./: CMakeLists.txt  README.md
.github/classroom/: autograding.json
include/ais1003/: functions.hpp  operations.hpp
tests/: CMakeLists.txt  test_functions.cpp
